--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href = '/'>Home</a>
+            <a class="nav-link" href = '/home'>Home</a>
         <li class="nav-item">
           <a class="nav-link" href='/logout'>Log out</a>
         </li>
