--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -3,6 +3,7 @@
     <table>
     {{#each boards}}
     <tr>
+        <td>{{board_id}}</td>
         <td>{{name}}</td>
         <td>{{description}}</td>
 </tr>
