--- a/ProjectSourceCode/src/views/pages/board.hbs
+++ b/ProjectSourceCode/src/views/pages/board.hbs
@@ -2,10 +2,10 @@
   <div class="container d-flex justify-content-left align-items-left">
     <div class="list-group list-group-flush">
       <div class="list-group-item">
-        <h1>Boards</h1>
+        <h1>Threads</h1>
       </div>
-    {{#each boards}}
-        <a href="/board" class="list-group-item list-groupp-item-action">
+    {{#each threads}}
+        <a href="#" class="list-group-item list-groupp-item-action">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{name}}</h5>
           </div>
