--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -5,12 +5,18 @@
         <h1>Boards</h1>
       </div>
     {{#each boards}}
-        <a href="/board" class="list-group-item list-groupp-item-action">
+        <a id={{board_id}} href="#" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{name}}</h5>
           </div>
           <p class="mb-1">{{description}}</p>
         </a>
+        <script type="text/javascript">
+          var posts_path = "/board?board_id=";
+          var link = document.getElementById({{board_id}});
+          var id = {{board_id}};
+          link.href = posts_path+id;
+        </script>
     {{/each}}
     </div>
   </div>
