Updated lots of web logic

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,16 +1,4 @@
-<header>Welcome!</header>
-
-<table style="width: 100%; border-collapse: collapse;">
-    <tr>
-      <td>First Name</th>
-      <td>{{this.first_name}}</td>
-    </tr>
-    <tr>
-      <td>Last Name</th>
-      <td>{{this.last_name}}</td>
-    </tr>
-    <tr>
-      <td>Email</th>
-      <td>{{this.email}}</td>
-    </tr>
-</table>
+<main class="container mt-5">
+  <h2>Welcome {{username}}!</h2>
+  <p>Click <a href="/board">Boards</a> to browse available discussion boards.</p>
+</main>
