--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -23,7 +23,7 @@
         <ul class="navbar-nav">
           {{#if logged}}
             <li class="nav-item me-2">
-              <a class="nav-link" href="/posts">Posts</a>
+              <a class="nav-link" href="/board">Boards</a>
             </li>
             <li class="nav-item me-1">
               <a class="nav-link" href="/logout">Logout</a>
