--- a/ProjectSourceCode/src/views/partials/title.hbs
+++ b/ProjectSourceCode/src/views/partials/title.hbs
@@ -1,5 +1,5 @@
 {{#if first_name}}
-  <title> {{first_name}} - CSCI 3308 Lab 8 </title>
+  <title> {{User}} - CSCI 3308 Group 3 Message Board </title>
   {{else}}
-  <title> CSCI 3308 Lab 8 </title>
+  <title> CSCI 3308 Group 3 Message Board </title>
 {{/if}}
