--- a/ProjectSourceCode/src/views/pages/board.hbs
+++ b/ProjectSourceCode/src/views/pages/board.hbs
@@ -2,7 +2,11 @@
 
   {{!-- Show all boards --}}
   {{#if showList}}
-    <h2>Available Boards</h2>
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2>Available Boards</h2>
+      <a href="/board_create" class="btn btn-primary">+ Create Board</a>
+    </div>
+
     <div class="list-group mb-4">
       {{#each boards}}
         <a href="/board?board_id={{board_id}}" class="list-group-item list-group-item-action">
