--- a/ProjectSourceCode/src/views/pages/board.hbs
+++ b/ProjectSourceCode/src/views/pages/board.hbs
@@ -25,7 +25,7 @@
   {{#if title}}
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h2>{{title}}</h2>
-      <a href="/posts/create?board_id={{board_id}}" class="btn btn-primary">+ Create Post</a>
+      <a href="/post_create?board_id={{board_id}}" class="btn btn-primary text-white">+ Create Post</a>
     </div>
     <p class="text-muted">{{description}}</p>
 
@@ -42,6 +42,7 @@
       {{/unless}}
     </div>
   {{/if}}
+
 
   {{#if error}}
     <div class="alert alert-danger mt-3">{{message}}</div>
