--- a/ProjectSourceCode/src/views/partials/footer.hbs
+++ b/ProjectSourceCode/src/views/partials/footer.hbs
@@ -3,6 +3,7 @@
     <p>
         &copy; Copyright 2025 : CSCI 3308 - Group 3 Message Board
     </p>
+    <p>Default Profile <a href="https://wallpapers.com/png/generic-person-icon-profile-ulmsmhnz0kqafcqn-2.html">PNG by vokina.n</a> on Wallpapers.com</p>
 </footer>
 </body>
 </html>
