--- a/ProjectSourceCode/src/views/pages/board.hbs
+++ b/ProjectSourceCode/src/views/pages/board.hbs
@@ -7,18 +7,36 @@
       </div>
     {{#each posts}}
         <a id={{post_id}} href="#" class="list-group-item list-group-item-action">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{title}}</h5>
+          <div class="media">
+            <div class="media-left media-top">
+              <img src={{icon_url}} class="media-object img-circle" style="width:50px">
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">{{username}}</h4>
+              <p>{{title}}</p>
+              <p>Posted: {{created_at}}</p>
+            </div>
           </div>
-          <p class="mb-1">Posted: {{created_at}}</p>
         </a>
         <script type="text/javascript">
-          var thread_path = "/thread?thread_id=";
+          var post_path = "/post?post_id=";
           var link = document.getElementById({{post_id}});
           var id = {{post_id}};
-          link.href = thread_path+id;
+          link.href = post_path+id;
         </script>
     {{/each}}
+        <div class="list-group-item">
+        <form method="POST" action="/post" class="w-100" style="max-width: 400px;">
+          <h3 class="mb-3 text-left">New Post</h3>
+          <div class="mb-3">
+            <input type="text" class="form-control" name="post_title" placeholder="Enter Post Title" required />
+          </div>
+          <div class="mb-3">
+            <input type="hidden" class="form-control" name="board_id" value={{board_id}} />
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Create Post</button>
+        </form>
+      </div>
     </div>
   </div>
 </main>
