--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -6,8 +6,8 @@
       </div>
     {{#each boards}}
         <a id={{board_id}} href="#" class="list-group-item list-group-item-action">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{name}}</h5>
+          <div class="d-flex justify-content-between">
+            <h3 class="mb-1">{{name}}</h3>
           </div>
           <p class="mb-1">{{description}}</p>
         </a>
@@ -25,7 +25,7 @@
             <input type="text" class="form-control" name="board_name" placeholder="Enter Board Title" required />
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control" name="board_description" placeholder="Enter Board Description" required />
+            <textarea type="text" class="form-control" name="board_description" rows="3" placeholder="Enter Board Description" required ></textarea>
           </div>
           <button type="submit" class="btn btn-primary w-100">Create Board</button>
         </form>
